# little-ice

./: .gitignore  LICENSE  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: AI 对话上下文管理设计-113规则.md  Frontend Architecture-modelrole.md  Little Ice UX-modelrole.md  backend-architecture.md  design-system.md  frontend-architecture.md  implementation-checklist.md  preview(3).html  ux-specification.md  后端设计-优化上下文-113原则.md  思维树图 · 系统界面设计文档.md  思维树图功能前端架构.md  思维树图功能设计.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20260612000001_initial.sql  20260614000001_add_roles.sql  20260622000001_add_chat_summaries.sql  20260622000002_fix_chat_indexes.sql  20260625000001_add_tree_nodes.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: client.rs  events.rs  mod.rs  stream.rs  summary.rs
src-tauri/src/commands/: ai.rs  chat.rs  favorite.rs  message.rs  mod.rs  role.rs  settings.rs  tree_node.rs
src-tauri/src/db/: chat.rs  favorite.rs  message.rs  mod.rs  pool.rs  role.rs  settings.rs  summary.rs  tree_node.rs
src-tauri/src/models/: chat.rs  favorite.rs  message.rs  mod.rs  role.rs  settings.rs  summary.rs  timestamp.rs  tree_node.rs
src-tauri/tests/: ai_events.rs  db_crud.rs  db_init.rs  summary.rs  tree_node.rs
src/components/common/: AiStatusBanner.tsx  BlinkingCursor.tsx  ConfirmDialog.tsx  EmptyState.tsx  FeedbackToast.tsx  InlineMessage.tsx  LoadingDots.tsx  MarkdownRenderer.tsx
src/components/layout/: AppShell.tsx  ContentPanel.tsx  ListPanel.tsx  NavItem.tsx  Sidebar.tsx
src/features/chat/: store.ts
src/features/favorite/: store.ts
src/features/role/: store.ts
src/features/settings/: store.ts
src/lib/: events.ts  tauri.ts  utils.ts
src/stores/: appStore.ts  draftStore.ts
src/styles/: globals.css
src/types/: generated.ts  models.ts
(+34 files in other folders)
